Added a button group to carousel.html file and Jumbotron.html file The button "Jumbotron" in the button group in carousel.html is working.

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,5 +1,13 @@
+auxiliary.org-netbeans-modules-javascript-nodejs.run_2e_enabled=false
+browser.autorefresh.Chrome.INTEGRATED=true
+browser.highlightselection.Chrome.INTEGRATED=true
+browser.run=true
+file.reference.Assesement3_WDP_WE5-public_html=public_html
+file.reference.Assesement3_WDP_WE5-test=test
 file.reference.Assesement3_WDP_WE5.0-public_html=public_html
 file.reference.Assesement3_WDP_WE5.0-test=test
 files.encoding=UTF-8
-site.root.folder=${file.reference.Assesement3_WDP_WE5.0-public_html}
-test.folder=${file.reference.Assesement3_WDP_WE5.0-test}
+site.root.folder=${file.reference.Assesement3_WDP_WE5-public_html}
+start.file=index.html
+test.folder=${file.reference.Assesement3_WDP_WE5-test}
+web.context.root=/Assesement3_WDP_WE5
